@@ -74,6 +74,7 @@ Bugfixes:
 - Fix build with ROCm 6.0 and device ID in stream names `HIP[D:S]`.
 - Provide the missing wrapper for `MPI_Request_get_status` and properly
   handle the case where the operation hasn't been completed yet.
+- Fix abort of OMPT adapter with nested parallel regions inside of tasks.
 
 ------------------- Released version 8.3 -----------------------------
 
